# drishti

./: .env.example  .gitignore  Makefile  Procfile  README.md  alembic.ini  load_harness_report.md  pyproject.toml  railway.toml  skills-lock.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_merchants.py  0002_init_connections.py  0003_init_sync_runs.py  0004_init_source_records.py  0005_init_webhook_deliveries.py  0006_init_commerce_tables.py  0007_init_order_line_items.py  0008_init_logistics_tables.py  0009_init_money_tables.py  0010_init_order_links.py  0011_init_chat_tables.py  0012_init_agent_tables.py  0013_init_immutability_triggers.py  0014_harden_rls_policies.py  0015_init_clerk_user_merchants.py  0016_allow_queued_agent_runs.py  0017_findings_lifecycle_config.py
docs/: AGENT.md  ARCHITECTURE.md  BUILD_PLAN.md  CITATION_CONTRACT.md  CONNECTORS.md  PRD.md  SCHEMA.md
fixtures/razorpay/: payments.json  refunds.json  settlements.json
fixtures/shiprocket/: shipments_page_1.json  tracking_AWB123456789.json
fixtures/shopify/: customers_page_1.json  orders_page_1.json  products_page_1.json
scripts/: load_harness.py  seed_agent_demo.py  seed_demo.py
tests/: test_agent_day4.py  test_auth.py  test_chat_loop.py  test_citation_validator.py  test_connectors_base.py  test_day3_connectors.py  test_db_session.py  test_demo_routes.py  test_health.py  test_isolation.py  test_repositories.py  test_shopify_connector.py  test_workers.py
web/: .env.example  package.json  playwright.config.ts  pnpm-lock.yaml
(+100 files in other folders)
