[project]
name = "drishti"
version = "0.1.0"
description = "AI ops analyst for D2C brands"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "alembic==1.17.2",
    "arq==0.26.3",
    "asyncpg==0.30.0",
    "fastapi==0.122.0",
    "httpx==0.28.1",
    "logfire[fastapi,httpx,sqlalchemy]==4.16.0",
    "openai==2.8.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "sqlalchemy[asyncio]==2.0.44",
    "supabase==2.30.0",
    "uvicorn[standard]==0.38.0",
]

[dependency-groups]
dev = [
    "black==25.11.0",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.6",
]

[project.scripts]
drishti-api = "drishti.app:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "drishti"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

